--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </style>
   <script>
     setTimeout(function() {
-      window.location.href = "https://rooneydsp.com/dir/financing/Financing.html";
+      window.location.href = "http://rooneydsp.com/cbf/Financing.html";
     }, 3000); // 3000 milliseconds = 3 seconds
   </script>
 </head>
